# uni-hci

./: .gitignore
client/: package-lock.json  package.json
client/public/: index.html  style.css
client/src/: App.vue  router.js
client/src/components/: FoodInfoBox.vue  FoodSearch.vue
client/src/views/: Home.vue  Login.vue  Status.vue  Submit.vue
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
